# chisel

./: .fix_yosys_abc.patch  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .install-dependencies.sh  .install-firrtl.sh  .install_verilator.sh  .install_yosys.sh  .install_z3.sh  .jvmops  .mergify.yml  .mill-jvm-opts  .mill-version  .run_chisel_tests.sh  .run_formal_checks.sh  .scala-steward.conf  .scalafix.conf  .scalafmt.conf  .scalafmt.config  .travis.yml  404.html  AGENTS.md  AdvTester.scala  Backends.scala  CNAME  CONTRIBUTING.md  ChiselMain.scala  ChiselPokeSpec.scala  ChiselSpec.scala  CommandEditor.scala  CommonBuild.sc  Driver.scala  Exerciser.scala  FirrtlTerpBackend.scala  HWIOTester.scala  IOAccessor.scala  LICENSE  Makefile  OrderedDecoupledHWIOTester.scala  (+62 more)
mlir/circel/: CMakeLists.txt
mlir/circel/include/circel/: module.modulemap
mlir/circel/lib/: CMakeLists.txt
mlir/circel/lib/Bindings/: CMakeLists.txt
mlir/circel/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/circel/test/Bindings/: CMakeLists.txt  lit.local.cfg
mlir/circt/: .clang-tidy  .gitignore  .gitmodules  .style.yapf  .yapfignore  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  SECURITY.md
mlir/circt/.github/workflows/: buildAndTest.yml  buildAndTestWindows.yml  nightlyIntegrationTests.yml  shortIntegrationTests.yml  trackLLVMChanges.yml  uploadFirrtlReleaseArtifacts.yml  uploadWheels.yml
mlir/circt/cmake/modules/: AddCIRCT.cmake  CIRCTConfig.cmake.in  CMakeLists.txt  GenVersionFile.cmake
mlir/circt/docs/: CMakeLists.txt  Charter.md  GettingStarted.md  Passes.md  PythonBindings.md  RationaleSymbols.md  Scheduling.md  ToolsWorkarounds.md  VerilogGeneration.md  dialects.dot  dialects.drawio  doxygen-mainpage.dox  doxygen.cfg.in
mlir/circt/docs/CommandGuide/: handshake-runner.md
mlir/circt/docs/Dialects/: LTL.md  Verif.md  _index.md
mlir/circt/docs/PyCDE/: _index.md  basics.md  compiling.md
mlir/circt/frontends/: CMakeLists.txt
mlir/circt/frontends/PyCDE/: CMakeLists.txt  auditwheel.sh  pyproject.toml  setup.py
mlir/circt/include/circt/: CMakeLists.txt  InitAllDialects.h  InitAllPasses.h  InitAllTranslations.h  Types.td
mlir/circt/include/circt-c/: ExportFIRRTL.h  ExportVerilog.h
mlir/circt/integration_test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/circt/integration_test/EmitVerilog/: basic.mlir  exampleCodeGen.fir  lint.mlir  standards-verilator.mlir  standards-vlog.mlir  sv-interfaces.mlir  verilog_equiv.fir
mlir/circt/integration_test/circt-lec/: builtin.mlir  comb.mlir  commandline.mlir  hw.mlir
mlir/circt/integration_test/circt-rtl-sim/: circt-rtl-sim-ieee-sim.sv  circt-rtl-sim-iverilog.sv  circt-rtl-sim-verilator.sv
mlir/circt/integration_test/handshake-runner/: call_bb.mlir  call_controlflow.mlir  cdiv-old-std.mlir  cdiv-std.mlir  complex_bb.mlir  floydwarshall-std.mlir  histogram-std.mlir  loadstore.mlir  loop-check-1-std.mlir  loop-check-2-std.mlir  matmul-check-std.mlir  matmul-std.mlir  memory_simple_2_std.mlir  memory_simple_std.mlir  simple_loop.mlir  simple_loop_buffered.mlir  simple_tuple_ops.mlir  sync.mlir
mlir/circt/lib/: CMakeLists.txt
mlir/circt/lib/Analysis/: CMakeLists.txt  DependenceAnalysis.cpp  SchedulingAnalysis.cpp  TestPasses.cpp
mlir/circt/lib/Bindings/: CMakeLists.txt
mlir/circt/lib/CAPI/: CMakeLists.txt
mlir/circt/lib/Conversion/: CMakeLists.txt  PassDetail.h
mlir/circt/lib/Dialect/: CMakeLists.txt
mlir/circt/lib/Firtool/: CMakeLists.txt  Firtool.cpp
mlir/circt/lib/LogicalEquivalence/: CMakeLists.txt  Circuit.cpp  LogicExporter.cpp  Solver.cpp
mlir/circt/lib/Reduce/: CMakeLists.txt  GenericReductions.cpp  Reduction.cpp  ReductionUtils.cpp  Tester.cpp
mlir/circt/lib/Scheduling/: ASAPScheduler.cpp  CMakeLists.txt  CPSATSchedulers.cpp  ChainingSupport.cpp  LPSchedulers.cpp  Problems.cpp  SimplexSchedulers.cpp  Utilities.cpp
mlir/circt/lib/Support/: APInt.cpp  BackedgeBuilder.cpp  CMakeLists.txt  ConversionPatterns.cpp  CustomDirectiveImpl.cpp  FieldRef.cpp  JSON.cpp  LoweringOptions.cpp  Passes.cpp  Path.cpp  PrettyPrinter.cpp  PrettyPrinterHelpers.cpp  SymCache.cpp  ValueMapper.cpp  Version.cpp.in
mlir/circt/lib/Transforms/: CMakeLists.txt  FlattenMemRefs.cpp  MapArithToComb.cpp  PassDetail.h  StripDebugInfoWithPred.cpp
mlir/circt/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/circt/test/Analysis/: dependence-analysis.mlir  infer-top-level.mlir  scheduling-analysis.mlir
mlir/circt/test/CAPI/: CMakeLists.txt  ir.c  om.c
mlir/circt/test/Dialect/: CMakeLists.txt
mlir/circt/test/Scheduling/: asap-errors.mlir  chaining-problem-errors.mlir  chaining-problems.mlir  chaining-simplex-errors.mlir  cyclic-problem-errors.mlir  cyclic-problems.mlir  cyclic-simplex-errors.mlir  modulo-problem-errors.mlir  modulo-problems.mlir  modulo-simplex-errors.mlir  problem-errors.mlir  problems.mlir  shared-operators-problem-errors.mlir  shared-operators-problems.mlir
mlir/circt/test/Transforms/: flatten_memref.mlir  flatten_memref_calls.mlir  map-arith-to-comb.mlir  strip-debuginfo-pred.mlir
mlir/circt/test/Unit/: lit.cfg.py  lit.site.cfg.py.in
mlir/circt/test/arcilator/: arcilator.mlir
mlir/circt/test/circt-as-dis/: basic-firrtl.mlir  commandline-as.mlir  commandline-dis.mlir
mlir/circt/test/circt-opt/: commandline.mlir  trivial.mlir
mlir/circt/test/circt-reduce/: canonicalize-reduction.mlir  commandline.mlir  cse-reduction.mlir  name-sanitizer.mlir  operation-pruner.mlir
mlir/circt/test/circt-translate/: commandline.mlir  parse_int64.fir
mlir/circt/test/firtool/: annotation-error.fir  blackbox-path.v  blackbox.mlir  chirrtl.fir  chisel-interface.fir  clock-gate.fir  commandline.mlir  connect-errors.fir  connect.fir  convention.fir  export-ref.fir  extract-test-code.fir  firtool-errors.mlir  (+31 more)
mlir/circt/tools/: CMakeLists.txt
mlir/circt/unittests/: CMakeLists.txt
mlir/circt/utils/: build-llvm.sh  build-release.sh  equiv-rtl.sh  find-vs.ps1  get-capnp.sh  get-iverilog.sh  get-or-tools.sh  get-verilator.sh  run-docker.sh  run-tests-docker.sh  update-docs-dialects.sh
(+19708 files in other folders)
