add_subdirectory(arcilator)
add_subdirectory(circt-as)
add_subdirectory(circt-cocotb-driver)
add_subdirectory(circt-dis)
add_subdirectory(circt-lec)
add_subdirectory(circt-lsp-server)
add_subdirectory(circt-opt)
add_subdirectory(circt-reduce)
add_subdirectory(circt-rtl-sim)
add_subdirectory(circt-translate)
add_subdirectory(esi)
add_subdirectory(handshake-runner)
add_subdirectory(firtool)
add_subdirectory(llhd-sim)
add_subdirectory(om-linker)
add_subdirectory(py-split-input-file)
add_subdirectory(hlstool)
